log/build_2024-11-15_15-40-21/hitl/stderr.log
  File "/home/widha893/ros2_hil_quadrotor/install/hitl/lib/python3.10/site-packages/hitl/communication.py", line 73
    return roll, pitch, yaw
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function

